--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ pytz==2021.1
 pywin32-ctypes==0.2.0
 regex==2020.11.13
 requests==2.25.1
+schedule==1.0.0
 service-identity==18.1.0
 six==1.14.0
 SQLAlchemy==1.3.17
