--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ dateparser==1.0.0
 db==0.1.1
 db-sqlite3==0.0.1
 Flask==1.1.2
+Flask-APScheduler==1.11.0
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.1
 future==0.18.2
