--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ Flask-APScheduler==1.11.0
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.1
 future==0.18.2
+gunicorn==20.0.4
 hyperlink==21.0.0
 idna==2.10
 incremental==17.5.0
